src/App.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");

@import url("https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,500&display=swap");

@import url("https://fonts.googleapis.com/css2?family=Inter:wght@500;600&display=swap");

@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");

#root {
  height: 100vh;
  font-family: "Montserrat", sans-serif;
}

.g4 {
  border-right: 0.2em solid #20c634;
}
.z4 {
  border-right: 0.2em solid #d5150b;
}

/* Add this CSS to your stylesheet or use inline styles */
::-webkit-scrollbar {
  width: 0.5em;
}

::-webkit-scrollbar-track {
  background-color: #f0f0f0;
}

::-webkit-scrollbar-thumb {
  background-color: #fbbf24;
  border-radius: 5px;
}

img {
  object-fit: contain;
}

.response-h {
  height: 75%;
}

@media (max-height: 800px) {
  .responsive-h {
    height: fit-content !important;
    padding: 2em 1em !important;
    max-height: 100% !important;
  }

  .small-h-table-img {
    width: 4em !important;
  }

  .small-h-matches-img {
    width: 6em !important;
  }
}

